--- a/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
+++ b/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
@@ -219,6 +219,12 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\actor\ActorSystem.ipp">
       <Filter>src\actor</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\config\ActorConfig.h">
+      <Filter>src\config</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\actor\IMessage.h">
+      <Filter>src\actor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\actor\ActorSystem.cpp">
