--- a/projects/test/TiActor/proj.win32/vc2015/TiActor.vcxproj
+++ b/projects/test/TiActor/proj.win32/vc2015/TiActor.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\src\test\TiActor\main.cpp" />
+    <ClCompile Include="..\..\..\..\..\src\test\TiActor\Pi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\src\test\TiActor\Pi.h" />
