--- a/projects/test/TiActor/proj.win32/vc2015/TiActor.vcxproj.filters
+++ b/projects/test/TiActor/proj.win32/vc2015/TiActor.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClCompile Include="..\..\..\..\..\src\test\TiActor\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\src\test\TiActor\Pi.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\src\test\TiActor\Pi.h">
