--- a/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
+++ b/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
@@ -237,6 +237,18 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\actor\ICell.h">
       <Filter>src\actor</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\actor\ActorState.h">
+      <Filter>src\actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\actor\ActorRefProvider.h">
+      <Filter>src\actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\MessageDispatcher.h">
+      <Filter>src\dispatch</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\Dispatchers.h">
+      <Filter>src\dispatch</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\actor\ActorSystem.cpp">
