--- a/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
+++ b/projects/main/libTiActor/proj.win32/vc2015/libTiActor.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\ConcurrentQueueMailbox.h">
       <Filter>src\dispatch</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\src\main\TiActor\dispatch\ThreadPoolDispatcher.h">
+      <Filter>src\dispatch</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\src\main\TiActor\actor\ActorSystem.cpp">
